# Simpletron-C

./: .gitignore  CMakeLists.txt  README.md  qual_eh_maior.txt
2023/Simpletron/: CMakeLists.txt  main.c
2023/Simpletron/Simpletron_Machine/: simpletron_functions.c  simpletron_machine.c
2023/Simpletron/Simpletron_Machine/SML/: adicionar.txt  mediana.txt  qual_eh_maior.txt  somatorio.txt
2023/Simpletron/Simpletron_Machine/headers/: helpers.h  simpletron_functions.h  simpletron_machine.h  simpletron_memory.h  unistd.h
Simpletron/: CMakeLists.txt  main.c
Simpletron/Simpletron_Machine/: simpletron_functions.c  simpletron_machine.c
Simpletron/Simpletron_Machine/SML/: adicionar.txt  dividir.txt  mediana.txt  multiplica.txt  qual_eh_maior.txt  somatorio.txt
Simpletron/Simpletron_Machine/headers/: simpletron_functions.h  simpletron_machine.h  simpletron_memory.h  unistd.h
